--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.1",
   "homepage": "https://github.com/enquirer/prompt-password",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
+  "contributors": [
+    "Brian Woodward (https://twitter.com/doowb)",
+    "Jon Schlinkert (http://twitter.com/jonschlinkert)"
+  ],
   "repository": "enquirer/prompt-password",
   "bugs": {
     "url": "https://github.com/enquirer/prompt-password/issues"
@@ -14,7 +18,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4.0"
   },
   "scripts": {
     "test": "mocha"
@@ -22,11 +26,14 @@
   "dependencies": {
     "ansi-cyan": "^0.1.1",
     "ansi-red": "^0.1.1",
-    "prompt-base": "^0.5.0"
+    "debug": "^2.6.6",
+    "prompt-base": "^0.8.2"
   },
   "devDependencies": {
-    "enquirer": "^0.3.1",
-    "gulp-format-md": "^0.1.10"
+    "enquirer": "^0.4.1",
+    "gulp-format-md": "^0.1.12",
+    "mocha": "^3.3.0",
+    "readline-ui": "^2.1.0"
   },
   "keywords": [
     "answer",
@@ -70,15 +77,10 @@
     "related": {
       "list": [
         "enquirer",
-        "enquirer-prompt",
-        "enquirer-question"
+        "prompt-base",
+        "prompt-question"
       ]
     },
-    "reflinks": [
-      "enquirer",
-      "verb",
-      "verb-generate-readme"
-    ],
     "lint": {
       "reflinks": true
     }
