--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prompt-password",
-  "description": "Password prompt. Can be used as a standalone prompt, or with a prompt system like [Enquirer].",
+  "description": "Password prompt. Can be used as a standalone prompt, or as a plugin for [Enquirer].",
   "version": "0.1.1",
   "homepage": "https://github.com/enquirer/prompt-password",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
@@ -18,22 +18,21 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=4.0"
+    "node": ">=5.0"
   },
   "scripts": {
     "test": "mocha"
   },
   "dependencies": {
-    "ansi-cyan": "^0.1.1",
-    "ansi-red": "^0.1.1",
-    "debug": "^2.6.6",
-    "prompt-base": "^0.8.2"
+    "debug": "^2.6.8",
+    "prompt-base": "^1.0.2"
   },
   "devDependencies": {
     "enquirer": "^0.4.1",
     "gulp-format-md": "^0.1.12",
-    "mocha": "^3.3.0",
-    "readline-ui": "^2.1.0"
+    "mocha": "^3.4.1",
+    "prompt-password-strength": "^1.0.1",
+    "readline-ui": "^2.2.1"
   },
   "keywords": [
     "answer",
@@ -78,11 +77,15 @@
       "list": [
         "enquirer",
         "prompt-base",
+        "prompt-password-strenth",
         "prompt-question"
       ]
     },
     "lint": {
       "reflinks": true
-    }
+    },
+    "reflinks": [
+      "enquirer"
+    ]
   }
 }
